<resources>
    <string name="app_name">Sistema de inventario</string>
    <string name="insert_dummy_data">insert dummy data</string>
    <string name="delete_all_data">borrar toda la data</string>
    <string name="production">Producto</string>
    <string name="dealer">Distribuidor</string>
    <string name="description">Descripción</string>
    <string name="photo">Photo</string>
    <string name="info_for_production">This is information for the production</string>
    <string name="add_production">Add producto</string>
    <string name="save">guardar</string>
    <string name="delete">borrar</string>
    <string name="add">add</string>
    <string name="price">Precio</string>
    <string name="weight">Peso</string>
    <string name="name_production">nombre</string>
    <string name="description_production">descripción de producción</string>
    <string name="get_started_by_adding_a_production">Comience agregando una producción</string>
    <string name="it_s_a_bit_lonely_here">Bienvenidos, Agregue sus productos....</string>
    <string name="delete_this_production">eliminar esta producción?</string>
    <string name="cancel">Cancelar</string>
    <string name="message">¿Desechar los cambios y salir de la edición?</string>
    <string name="discard">Descarte</string>
    <string name="keep_editing">Seguir editando</string>
    <string name="price_">precio $</string>
    <string name="weight_kgs">Peso</string>
    <string name="dealer_d">Distribuidor</string>
    <string name="description_p">descripcion</string>
    <string name="add_password">Add contraseña</string>
    <string name="incorrect_password">password incorrecta</string>
    <string name="enter_password">ingrese password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Inventory Productos</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="help">Ayuda</string>
    <string name="about">información</string>
    <string name="read">Escribenos a las redes sociales para mas información sobre el proyecto.</string>
    <string name="about_app">Aplicación de Inventario para la materia de Eleectiva </string>
    <string name="delete_all_customers">Eliminar todos los clientes</string>
    <string name="insert_dummy_customers">insertar clientes ficticios</string>
    <string name="name_product">Nombre Producto</string>
    <string name="name_customer">Nombre Proveedor</string>
    <string name="quantity">Cantidad</string>
    <string name="amount">Rebate</string>
    <string name="address">Información</string>
    <string name="date">Fecha</string>
    <string name="notes">Notas</string>
    <string name="delete_customer">¿Eliminar este cliente?</string>

</resources>
