<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:padding="16dp"
    tools:context=".EditActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context=".EditActivity">
        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>
        <LinearLayout
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/nameItems"
                android:text="@string/production"/>
            <EditText
                android:id="@+id/production"
                style="@style/editItems"
                android:hint="@string/name_production"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/nameItems"
                android:text="Cantidad"/>
            <EditText
                android:inputType="number"
                android:id="@+id/quantity"
                style="@style/editItems"
                android:hint="Cantidad"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/nameItems"
                android:text="@string/price"/>
            <EditText
                android:id="@+id/price"
                android:inputType="number"
                style="@style/editItems"
                android:hint="@string/price_"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/nameItems"
                android:text="@string/weight"/>
            <EditText
                android:id="@+id/weight"
                android:inputType="number"
                style="@style/editItems"
                android:hint="@string/weight_kgs"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/nameItems"
                android:text="@string/dealer"/>
            <EditText
                android:id="@+id/dealer"
                style="@style/editItems"
                android:hint="@string/dealer_d"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/nameItems"
                android:text="@string/description"/>
            <EditText
                android:id="@+id/description"
                style="@style/editItems"
                android:hint="@string/description_p"/>
        </LinearLayout>
        <ImageButton
            android:id="@+id/image-view"
            android:layout_gravity="center"
            android:background="#fff"
            android:src="@drawable/ic_gallery2"
            android:layout_marginBottom="8dp"
            android:onClick="imgGallery"
            android:scaleType="center"
            android:layout_width="250dp"
            android:layout_height="150dp"/>
    </LinearLayout>
</ScrollView>